--- a/settings.json
+++ b/settings.json
@@ -1,3 +1,9 @@
 {
-    "DEBUG": true
+    "DEBUG": true,
+    "file_server": {
+        "enabled":          true ,
+        "enable_dirTree":   true,
+        "disk_path":  "/Users/frangossauro/VJ",
+        "public_path": "/assets"
+    }
 }
