--- a/settings.json
+++ b/settings.json
@@ -5,5 +5,10 @@
         "enable_dirTree":   true,
         "disk_path":  "/Users/frangossauro/VJ",
         "public_path": "/assets"
+    },
+    "embed": {
+        "enabled" : true,
+        "maxwidth": 900,
+        "api_key": "705c38a211be4c9ba18f3e99fb851b4b"
     }
 }
