Fixed scss dependencies . Using both mtr and meteor

--- a/packages/.gitignore
+++ b/packages/.gitignore
@@ -1,18 +1,4 @@
-/autoform
-/collection2
-/external-file-loader
-/npm
-/inspector
-/iron-router
-/fast-render
-/marked
-/static-server
-/scss
 /bourbon
+/bitters
 /neat
-/simple-schema
-/moment
-/iron-layout
-/blaze-layout
-/iron-core
-/iron-dynamic-template
+/bbfc:refills
