--- a/settings.json
+++ b/settings.json
@@ -9,7 +9,7 @@
     "embed": {
         "enabled" : true,
         "maxwidth": 900,
-        "api_key": "705c38a211be4c9ba18f3e99fb851b4b"
+        "key": "705c38a211be4c9ba18f3e99fb851b4b"
     },
     "channels": {
         "enabled": true,
