--- a/settings.json
+++ b/settings.json
@@ -17,7 +17,7 @@
     },
     "public": {
         "channels": {
-            "default": "frontpage"
+            "default": "all"
         }
     }
 }
